@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmBinEntry.h,v $
   Language:  C++
-  Date:      $Date: 2004/06/22 14:42:02 $
-  Version:   $Revision: 1.10 $
+  Date:      $Date: 2004/06/23 13:02:36 $
+  Version:   $Revision: 1.11 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -41,7 +41,7 @@ public:
    ~gdcmBinEntry(void);
    
    void Print(std::ostream &os = std::cout);
-   virtual void Write(FILE *fp);
+   virtual void Write(FILE*, FileType);
 
    /// \brief Returns the area value of the current Dicom Header Entry
    ///  when it's not string-translatable (e.g : a LUT table)         
